# bybit-mcp

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
scripts/: setup-gcp.sh
src/bybit_mcp/: __main__.py  auth.py  config.py  server.py
src/bybit_mcp/tools/: account.py  asset.py  market.py  position.py  trading.py
src/bybit_mcp/utils/: formatters.py
tests/: test_auth.py
